--- a/_posts/2014-03-08-nginx.md
+++ b/_posts/2014-03-08-nginx.md
@@ -26,24 +26,10 @@ tags: [mac]
 MysQl先不配
 
 	
-###设置隐藏文件
-配置完nginx，我想把doropbox文件夹移动到nginx服务文件中，可是没有办法选择到隐藏的目录，需要手动取消指定目录的隐藏属性
+##nginx下发现403 forbidden
 
-	#显示：
-	defaults write com.apple.finder AppleShowAllFiles -bool true
-	#隐藏：
-	defaults write com.apple.finder AppleShowAllFiles -bool false
-	
-##### 1、显示所有的隐藏目录
+把Dropbox目录扔到nginx下，访问Dropbox目录，发现“403 forbidden”
 
+查看`ls -l`目录权限
 
-	cd /
-
-	sudo chflags nohidden *
-
-##### 2、隐藏
-
-	cd /
-
-	sudo chflags hidden *
-
+确保Dropbox名称含最后一个x（其他用户的执行权限），倘若Dropbox缺少x，执行 `chmod o+x folder`把x权限添加上即可。
