--- a/_posts/2013-12-16-nodejs.md
+++ b/_posts/2013-12-16-nodejs.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: NodeJs"
+title: "NodeJs"
 description: "创建SSH key的方法很简单，执行如下命令就可以"
 category: "记事本"
 category-substitution: 原创
